--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.1.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.0",
+    "ai": "^4.1.45",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "next": "15.1.7",
