--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@ai-sdk/groq": "^1.1.10",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.4.0",
+    "@shadcn/ui": "^0.0.4",
     "ai": "^4.1.45",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
